ch45/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: kubebook-ch45
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["HOSTNAME"]
      secretName: web-tls
  rules:
    - host: HOSTNAME
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kubebook-ch21-api
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubebook-ch21-web
                port:
                  number: 80
